# esiaf_hyperion_configs

./: CMakeLists.txt  README.md  package.xml
components/: audio_segmenter.yaml  doa.yaml  elongator.yaml  emotion_recognition.yaml  gender_recognition.yaml  grabber.yaml  orchestrator.yaml  player.yaml  pocketsphinx.yaml  psa.yaml  recorder.yaml  roscore.yaml  splitter.yaml  splitter_cpp.yaml  wav_player.yaml  widener.yaml
components/groups/: additional_components.yaml  ros_basics.yaml  speechrec.yaml  speechrec_basics.yaml  ssl_beamform.yaml  utils.yaml
systems/: eval_pipeline_1.yaml  eval_pipeline_2.yaml  eval_pipeline_3.yaml  eval_pipeline_4.yaml  eval_pipeline_5.yaml  eval_robocup_task.yaml  pepper.yaml
systems/env/: pepper_env.sh  pepper_env_pipeline_1.sh  pepper_env_pipeline_2.sh  pepper_env_pipeline_3.sh  pepper_env_pipeline_4.sh  pepper_env_pipeline_5.sh  pepper_env_robocup_task.sh
